[package]
name = "bygge"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
description = "Build your project."
license = "MIT OR Apache-2.0"
repository = "https://github.com/badboy/bygge"

[dependencies]
pico-args = "0.3.1"
cargo-lock = { version = "4.0.1", default-features = false, features = ["dependency-tree"] }
cargo_toml = "0.8.0"
petgraph = "0.5.1"
dirs = "2.0.2"
